# grooveondemand

./: .coveragerc  .gitignore  .test_env  LICENSE  README.md  env.dist  pyproject.toml  pytest.ini
groove/: auth.py  cli.py  conftest.py  console.py  editor.py  exceptions.py  handlers.py  helper.py  ondemand.py  path.py  playlist.py  shell.py  webserver.py
groove/db/: __init__.py  helpers.py  manager.py  scanner.py  schema.py
groove/media/: transcoder.py
groove/shell/: __init__.py  base.py  browse.py  create.py  help.py  interactive_shell.py  load.py  playlist.py  quit.py  stats.py
groove/static/static/: player.js
groove/static/themes/blue_train/: README.md  console.cfg
groove/static/themes/blue_train/static/: styles.css
groove/static/themes/blue_train/templates/: playlist.tpl
groove/webserver/: requests.py  themes.py  webserver.py
static/: player.js
test/: conftest.py  test.db  test_ondemand.py  test_path.py  test_playlists.py  test_requests.py  test_scanner.py  test_shell.py  test_themes.py  test_webserver.py
test/fixtures/: env
test/fixtures/media/UNKLE/Psyence Fiction/: 01 Guns Blazing (Drums of Death, Part 1).flac
test/fixtures/themes/default_theme/: README.md  console.cfg
themes/blue_train/: console.cfg
themes/blue_train/static/: styles.css
themes/blue_train/templates/: playlist.tpl
web-templates/: playlist.tpl
